<resources>
    <string name="app_name">FlyingWords</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_chats">Chats</string>
    <string name="title_friends">Friends</string>
    <string name="title_search">Search</string>
    <string name="title_requests">Requests</string>
    <string name="title_account">Account</string>
    <string name="Stories">Story</string>
    <string name="title_story">Story</string>
    <string name="title_mystories">My Stories</string>
    <string name="title_home">Home</string>
    <string name="account">Account</string>
    <string name="title_activity_create_new_post">New Post</string>
    <string name="title_activity_post_details">Comments</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">closed</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_post_details_view">Post</string>
    <string name="title_notification">Notifications</string>
    <string name="title_activity_likers">Likes</string>
</resources>
